*** Version 2.8         (11 avril 2018)   ***
- Améliorations
Agents volants : Permet de distinguer une liste d'agents dans les plannings (attribution d'une couleur). Les agents sont choisi semaine par semaine dans le sous-menu Planning / Agents-volants

*** Version 2.7.12      (29 janvier 2018)   ***
- Améliorations
CAS : Ajout du paramètre CAS-ServiceURL pour permettre de forcer l'URL de redirection vers l'application
CAS : Amélioration du processus d'authentification CAS et suppression des redirections JavaScript

- Corrections
Correction de la suppression des agents (CSRFToken)
Correction du filtre sur les catégories dans le menu du planning

*** Version 2.7.11      (20 janvier 2018)   ***
- Corrections
Planning : Correction du calcul des heures de SP lorsque les absences sont déduites
Absences : Contrôle empêchant l'enregistrement d'une absence sans date de fin

*** Version 2.7.10      (20 décembre 2017)   ***
- Corrections
Planning : corrige une erreur empêchant de barrer les agents dans le planning s'ils étaient sur des absences non-validées

*** Version 2.7.09      (19 décembre 2017)   ***
- Corrections
Absences récurrentes : conserve les exceptions lors de la modification des absences récurrentes
Absences récurrentes : Ne double plus la première occurence lors de la modification des absence récurrentes
Absences récurrentes : N'affiche plus l'icône "récurrences" sur les événements ne contenant plus qu'une seule occurence

*** Version 2.7.08      (14 décembre 2017)   ***
- Corrections
Absences récurrentes : correction des erreurs d'ajout et suppression d'agents lors de la modification d'absences récurrentes toutes occurences.
Absences récurrentes : correction de l'attribut COUNT lors de la modification des événements courant et suivants

*** Version 2.7.07      (11 décembre 2017)   ***
- Corrections
Correction de l'importation des fichiers ICS lorsque le champ DESCRIPTION est inexistant ou vide